<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="android.com.messenger.SignUp">
    <EditText
        android:layout_width="match_parent"
        android:id="@+id/fname"
        android:hint="@string/fname"
        android:layout_height="wrap_content" />
    <EditText
        android:layout_width="match_parent"
        android:id="@+id/lname"
        android:hint="@string/lname"
        android:layout_height="wrap_content" />
    <EditText
        android:layout_width="match_parent"
        android:id="@+id/emailSIgnUP"
        android:inputType="textEmailAddress"
        android:hint="@string/emailSignUp"
        android:layout_height="wrap_content" />
    <EditText
        android:layout_width="match_parent"
        android:id="@+id/pwd_signup"
        android:hint="@string/pwdSignUp"
        android:inputType="textPassword"
        android:layout_height="wrap_content" />
    <RadioGroup
        android:layout_width="match_parent"
        android:id="@+id/rGroup"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <RadioButton
            android:layout_width="wrap_content"
            android:text="@string/male"
            android:id="@+id/male"
            android:layout_height="match_parent" />
        <RadioButton
            android:layout_width="wrap_content"
            android:text="@string/female"
            android:id="@+id/female"
            android:layout_height="match_parent" />
    </RadioGroup>

    <ImageView
        android:layout_width="140dp"
        android:id="@+id/dp"
        android:src="@drawable/noimage"
        android:layout_gravity="center"
        android:layout_height="100dp" />
    <Button
        android:layout_width="match_parent"
        android:id="@+id/signIn"
        android:onClick="SignUp"
        android:text="@string/signIn"
        android:layout_height="wrap_content" />
    <Button
        android:layout_width="match_parent"
        android:id="@+id/cancel"
        android:text="@string/cancel"
        android:onClick="CancelSignUp"
        android:layout_height="wrap_content" />
</LinearLayout>
