<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Update_View_Profile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        android:visibility="gone"
        android:id="@+id/updateProfile"
        android:orientation="vertical">

        <EditText
            android:id="@+id/fname_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fname" />

        <EditText
            android:id="@+id/lname_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lname" />

        <ImageView
            android:id="@+id/dp_update"
            android:layout_width="140dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:src="@drawable/noimage" />

        <Button
            android:id="@+id/btn_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_update" />

        <Button
            android:id="@+id/cancel_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="CancelUpdate"
            android:text="@string/cancel" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/viewProfile"
        android:layout_marginTop="100dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/fname_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:hint="@string/fname" />

        <TextView
            android:id="@+id/lname_view"
            android:textSize="20dp"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lname" />

        <ImageView
            android:id="@+id/dp_view"
            android:layout_width="140dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:src="@drawable/noimage" />

        <Button
            android:id="@+id/btn_back"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_back" />

    </LinearLayout>


</LinearLayout>
