<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="android.com.messenger.MainActivity">


    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/emailLogin"
        android:inputType="textEmailAddress"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:hint="@string/emailHint" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/pwdLogin"
        android:inputType="textPassword"
        android:layout_below="@+id/emailLogin"
        android:layout_centerHorizontal="true"
        android:hint="@string/pwdHint" />
    <Button
        android:layout_width="wrap_content"
        android:id="@+id/login"
        android:text="@string/login"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pwdLogin"
        android:layout_alignLeft="@+id/pwdLogin"
        android:layout_alignStart="@+id/pwdLogin"
        android:layout_alignRight="@+id/pwdLogin"
        android:layout_alignEnd="@+id/pwdLogin" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signUp"
        android:id="@+id/signUp"
        android:layout_marginTop="5dp"
        android:layout_centerVertical="true"
        android:layout_alignRight="@+id/login"
        android:layout_alignEnd="@+id/login"
        android:layout_alignLeft="@+id/login"
        android:layout_alignStart="@+id/login" />

    <com.google.android.gms.common.SignInButton
        android:layout_width="150dp"
        android:src="@drawable/google"
        android:id="@+id/sign_in_button"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/loginButton"
        android:layout_alignLeft="@+id/loginButton"
        android:layout_alignStart="@+id/loginButton"
        android:layout_alignRight="@+id/loginButton"
        android:layout_alignEnd="@+id/loginButton" />

    <!--<com.facebook.login.widget.LoginButton-->
        <!--android:id="@+id/login_button"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_gravity="center_horizontal"-->
        <!--android:layout_marginTop="30dp"-->
        <!--android:layout_marginBottom="30dp" />-->

    <com.facebook.login.widget.LoginButton
        android:layout_width="150dp"
        android:id="@+id/loginButton"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signUp"
        android:layout_alignRight="@+id/signUp"
        android:layout_alignEnd="@+id/signUp"
        android:layout_alignLeft="@+id/signUp"
        android:layout_alignStart="@+id/signUp" />




</RelativeLayout>
